--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,3 +30,5 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.android.support:cardview-v7:25.3.1'
 }
+
+apply plugin: 'com.google.gms.google-services'
