--- a/skyadapters/build.gradle
+++ b/skyadapters/build.gradle
@@ -30,7 +30,6 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.android.support:cardview-v7:25.3.1'
-    compile 'com.google.android.gms:play-services-gcm:11.6.2'
-    compile 'com.google.firebase:firebase-messaging:11.6.2'
+    compile 'com.google.firebase:firebase-core:11.6.2'
 }
 
