--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,12 @@
 apply plugin: 'com.android.application'
 
+repositories {
+    mavenCentral()
+    maven {
+        url "https://maven.google.com"
+    }
+}
+
 android {
     compileSdkVersion 25
     buildToolsVersion "26.0.0"
