--- a/skyadapters/build.gradle
+++ b/skyadapters/build.gradle
@@ -1,5 +1,11 @@
 apply plugin: 'com.android.library'
 
+repositories {
+    maven {
+        url "https://maven.google.com"
+    }
+}
+
 android {
     compileSdkVersion 25
     buildToolsVersion "26.0.0"
@@ -30,6 +36,6 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.android.support:cardview-v7:25.3.1'
-    compile 'com.google.firebase:firebase-core:11.6.2'
+    compile 'com.google.firebase:firebase-messaging:11.6.2'
 }
 
