--- a/skyadapters/src/main/AndroidManifest.xml
+++ b/skyadapters/src/main/AndroidManifest.xml
@@ -4,12 +4,12 @@
 
     <application android:allowBackup="true" android:label="@string/app_name"
         android:supportsRtl="true">
-        <service
+        <!--<service
             android:name=".MyFirebaseInstanceIdService">
             <intent-filter>
                 <action android:name="com.google.firebase.INSTANCE_ID_EVENT"/>
             </intent-filter>
-        </service>
+        </service>-->
 
     </application>
 
